add new test for multidimentional arrays